# suivi-des-dossiers-d-inconduite

./: .gitignore  index.html  package-lock.json  package.json
src/: App.tsx  theme.ts
src-tauri/: Cargo.toml  bd_sdi.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: agent.rs  rapport.rs
src-tauri/src/db/: mod.rs
src/components/: DocumentHeader.tsx  Entete.tsx
src/components/referentiels/: EntetesTab.tsx  GradesTab.tsx  LogsTab.tsx  ParametresTab.tsx  SanctionsTab.tsx  ServicesTab.tsx  SignatairesTab.tsx  types.ts
src/hooks/: usePrint.ts
src/pages/: AgentManager.tsx  Agents.tsx  Dashboard.tsx  Dossiers.tsx  Rapports.tsx  Recommandations.tsx  Referentiels.tsx  SuiviRecommandationsManager.tsx
src/pages/agents/: AgentDeleteModal.tsx  AgentExportMenu.tsx  AgentFilters.tsx  AgentFormModal.tsx  AgentImportModal.tsx  AgentManager.tsx  AgentPagination.tsx  AgentStatsCards.tsx  AgentTable.tsx  AgentViewModal.tsx
src/utils/: printUtils.ts
