[package]
name = "bd-sdi-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Configuration pour que Tauri trouve le point d'entrée
[[bin]]
name = "bd-sdi-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
